# cc-email

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SPEC.md  cc-email-gmail.toml  cc-email.service
.github/workflows/: ci.yml  release.yml
npm/cc-email/: install.js  package.json  run.js
src/: attachment.rs  cli.rs  config.rs  cron.rs  daemon.rs  diagnostics.rs  engine.rs  error.rs  lib.rs  main.rs  permission.rs  relay.rs  security.rs  webhook.rs  workspace.rs
src/agent/: claude_code.rs  command_runner.rs  mod.rs
src/command/: builtins.rs  mod.rs
src/inbox/: imap_poll.rs  mod.rs
src/mail/: formatter.rs  mod.rs  parser.rs  reply.rs
src/session/: mod.rs
src/task/: model.rs  store.rs
tests/: integration.rs
