[package]
name = "cc-email"
version = "0.0.4"
edition = "2021"
description = "A local-first email listener for coding agents"
license = "MIT"
readme = "README.md"

[dependencies]
imap = "3.0.0-alpha.15"
native-tls = { version = "0.2", features = ["vendored"] }
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
mail-parser = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
futures = "0.3"
serde_json = "1"
dirs = "5"
